翻译一些人名

--- a/translations/texts/species/catnamegen.config.json
+++ b/translations/texts/species/catnamegen.config.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Artemis",
+      "Chs": "-阿尔忒弥斯",
       "Eng": "-Artemis"
     }
   },
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Blaze",
+      "Chs": "-火焰",
       "Eng": "-Blaze"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Boots",
+      "Chs": "-靴子",
       "Eng": "-Boots"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Callie",
+      "Chs": "-卡利",
       "Eng": "-Callie"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Cat",
+      "Chs": "-猫",
       "Eng": "-Cat"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Er'uth",
+      "Chs": "-厄洛斯",
       "Eng": "-Er'uth"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Felix",
+      "Chs": "-菲利克斯",
       "Eng": "-Felix"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Firestar",
+      "Chs": "-火焰星星",
       "Eng": "-Firestar"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Fluffy",
+      "Chs": "-毛茸茸的",
       "Eng": "-Fluffy"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Garfield",
+      "Chs": "-加菲尔德",
       "Eng": "-Garfield"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Gii'naj",
+      "Chs": "-吉奈伊",
       "Eng": "-Gii'naj"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Kao'kao",
+      "Chs": "-靠靠",
       "Eng": "-Kao'kao"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Kitty",
+      "Chs": "-基蒂",
       "Eng": "-Kitty"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Leafpool",
+      "Chs": "-叶池",
       "Eng": "-Leafpool"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Luna",
+      "Chs": "-露娜",
       "Eng": "-Luna"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Meowth",
+      "Chs": "-喵喵",
       "Eng": "-Meowth"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Midnight",
+      "Chs": "-午夜",
       "Eng": "-Midnight"
     }
   },
@@ -229,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Mittens",
+      "Chs": "-米滕斯",
       "Eng": "-Mittens"
     }
   },
@@ -242,7 +242,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Neko",
+      "Chs": "-奈科",
       "Eng": "-Neko"
     }
   },
@@ -255,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Nyan",
+      "Chs": "-年",
       "Eng": "-Nyan"
     }
   },
@@ -268,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Pinky",
+      "Chs": "-平基",
       "Eng": "-Pinky"
     }
   },
@@ -281,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Rusty",
+      "Chs": "-罗斯迪",
       "Eng": "-Rusty"
     }
   },
@@ -294,7 +294,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Skitty",
+      "Chs": "-斯凯蒂",
       "Eng": "-Skitty"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Squiggums",
+      "Chs": "-鱿鱼口香糖",
       "Eng": "-Squiggums"
     }
   },
@@ -320,7 +320,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Squishy",
+      "Chs": "-鱿羞",
       "Eng": "-Squishy"
     }
   },
@@ -333,7 +333,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Stormeater",
+      "Chs": "-噬风怪",
       "Eng": "-Stormeater"
     }
   },
@@ -346,7 +346,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Stormfur",
+      "Chs": "-暴风雪",
       "Eng": "-Stormfur"
     }
   },
@@ -359,7 +359,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Tao'ji",
+      "Chs": "-陶记",
       "Eng": "-Tao'ji"
     }
   },
@@ -372,7 +372,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Tel'vash",
+      "Chs": "-特尔瓦什",
       "Eng": "-Tel'vash"
     }
   },
@@ -385,7 +385,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-Xih'lao",
+      "Chs": "-西洛",
       "Eng": "-Xih'lao"
     }
   },
@@ -398,7 +398,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Artemis",
+      "Chs": "阿尔忒弥斯",
       "Eng": "Artemis"
     }
   },
@@ -411,7 +411,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ayami",
+      "Chs": "彩未",
       "Eng": "Ayami"
     }
   },
@@ -424,7 +424,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Boots",
+      "Chs": "靴子",
       "Eng": "Boots"
     }
   },
@@ -437,7 +437,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Callie",
+      "Chs": "卡利",
       "Eng": "Callie"
     }
   },
@@ -450,7 +450,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cat",
+      "Chs": "猫",
       "Eng": "Cat"
     }
   },
@@ -463,7 +463,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Er'uth",
+      "Chs": "厄洛斯",
       "Eng": "Er'uth"
     }
   },
@@ -476,7 +476,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Felix"
+      "Eng": "Felix",
+      "Chs": "费利克斯"
     }
   },
   {
@@ -488,7 +489,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Firestar",
+      "Chs": "火焰星星",
       "Eng": "Firestar"
     }
   },
@@ -501,7 +502,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Fluffy",
+      "Chs": "毛茸茸的",
       "Eng": "Fluffy"
     }
   },
@@ -514,7 +515,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Garfield",
+      "Chs": "加菲尔德",
       "Eng": "Garfield"
     }
   },
@@ -527,7 +528,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Gii'naj",
+      "Chs": "吉奈伊",
       "Eng": "Gii'naj"
     }
   },
@@ -540,7 +541,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kao'kao",
+      "Chs": "靠靠",
       "Eng": "Kao'kao"
     }
   },
@@ -553,7 +554,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kitty",
+      "Chs": "基蒂",
       "Eng": "Kitty"
     }
   },
@@ -566,7 +567,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Leafpool",
+      "Chs": "叶池",
       "Eng": "Leafpool"
     }
   },
@@ -579,7 +580,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Meowth",
+      "Chs": "喵喵",
       "Eng": "Meowth"
     }
   },
@@ -592,7 +593,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Midnight",
+      "Chs": "午夜时分",
       "Eng": "Midnight"
     }
   },
@@ -605,7 +606,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Neko",
+      "Chs": "奈科",
       "Eng": "Neko"
     }
   },
@@ -618,7 +619,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nyan",
+      "Chs": "年",
       "Eng": "Nyan"
     }
   },
@@ -631,7 +632,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pinky",
+      "Chs": "平基",
       "Eng": "Pinky"
     }
   },
@@ -644,7 +645,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty"
+      "Eng": "Rusty",
+      "Chs": "罗斯迪"
     }
   },
   {
@@ -656,7 +658,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Skitty",
+      "Chs": "苗条",
       "Eng": "Skitty"
     }
   },
@@ -669,7 +671,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Squiggum",
+      "Chs": "鱿鱼口香糖",
       "Eng": "Squiggum"
     }
   },
@@ -682,7 +684,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Squishy",
+      "Chs": "鱿羞",
       "Eng": "Squishy"
     }
   },
@@ -695,7 +697,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Stormeater",
+      "Chs": "噬风怪",
       "Eng": "Stormeater"
     }
   },
@@ -708,7 +710,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Stormfur",
+      "Chs": "暴风毛",
       "Eng": "Stormfur"
     }
   },
@@ -721,7 +723,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tao'ji",
+      "Chs": "陶记",
       "Eng": "Tao'ji"
     }
   },
@@ -734,7 +736,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tel'vash",
+      "Chs": "特尔瓦什",
       "Eng": "Tel'vash"
     }
   },
@@ -747,7 +749,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Xih'lao",
+      "Chs": "西洛",
       "Eng": "Xih'lao"
     }
   },
@@ -760,7 +762,7 @@
       ]
     },
     "Texts": {
-      "Chs": "yami",
+      "Chs": "雅米",
       "Eng": "yami"
     }
   }
