--- a/translations/texts/species/fudarkizku.species.json
+++ b/translations/texts/species/fudarkizku.species.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "DARK IZKU",
+      "Chs": "黑暗 伊兹库",
       "Eng": "DARK IZKU"
     }
   },
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Myphis",
+      "Chs": "梦比斯族",
       "Eng": "Myphis"
     }
   },
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Myphis通常被认为是“可憎之物”。他们拥有异常强健的免疫系统，且是黑暗的追逐者。",
+      "Chs": "梦比斯族通常被认为是“可憎之物”。他们拥有异常强健的免疫系统，且是黑暗的追逐者。",
       "Eng": "Often referred to as 'abominations', the Myphis have exceptionally robust immune systems and are fans of darkness."
     }
   }
