--- a/translations/texts/species/fuizku.species.json
+++ b/translations/texts/species/fuizku.species.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "IZKU",
+      "Chs": "伊兹库",
       "Eng": "IZKU"
     }
   },
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Izku",
+      "Chs": "伊兹库",
       "Eng": "Izku"
     }
   },
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Izku几乎什么都不懂，他们的先进技术来自于纯粹的幸运。",
+      "Chs": "伊兹库几乎什么都不懂，他们的先进技术来自于纯粹的幸运。",
       "Eng": "Masters of nearly nothing, the Izku advanced through sheer luck."
     }
   }
