--- a/translations/texts/species/mantizifemalenamegen.config.json
+++ b/translations/texts/species/mantizifemalenamegen.config.json
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aggripina",
+      "Chs": "阿吉里皮纳",
       "Eng": "Aggripina"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Alba",
+      "Chs": "阿尔巴",
       "Eng": "Alba"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Antonia",
+      "Chs": "安东尼娅",
       "Eng": "Antonia"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aureliana",
+      "Chs": "奥雷利亚娜",
       "Eng": "Aureliana"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Caelia",
+      "Chs": "卡利亚",
       "Eng": "Caelia"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cassia",
+      "Chs": "卡西亚",
       "Eng": "Cassia"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Drusa",
+      "Chs": "德鲁萨",
       "Eng": "Drusa"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Fabia",
+      "Chs": "法比亚",
       "Eng": "Fabia"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Flavia",
+      "Chs": "弗拉维亚",
       "Eng": "Flavia"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Germana",
+      "Chs": "德国a",
       "Eng": "Germana"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hadriana",
+      "Chs": "哈德良",
       "Eng": "Hadriana"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Maxima",
+      "Chs": "马克西姆",
       "Eng": "Maxima"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tacita",
+      "Chs": "塔奇塔",
       "Eng": "Tacita"
     }
   }
