--- a/translations/texts/species/peglacinamegen.config.json
+++ b/translations/texts/species/peglacinamegen.config.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aga",
+      "Chs": "阿加",
       "Eng": "Aga"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Alph",
+      "Chs": "阿尔法",
       "Eng": "Alph"
     }
   },
@@ -48,7 +48,7 @@
       ]
     },
     "Texts": {
-      "Chs": "An",
+      "Chs": "一",
       "Eng": "An"
     }
   },
@@ -61,7 +61,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Anast",
+      "Chs": "阿纳斯特",
       "Eng": "Anast"
     }
   },
@@ -74,7 +74,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ant",
+      "Chs": "蚂蚁",
       "Eng": "Ant"
     }
   },
@@ -87,7 +87,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aqui",
+      "Chs": "阿奎",
       "Eng": "Aqui"
     }
   },
@@ -113,7 +113,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aud",
+      "Chs": "奥德",
       "Eng": "Aud"
     }
   },
@@ -126,7 +126,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aug",
+      "Chs": "八月",
       "Eng": "Aug"
     }
   },
@@ -139,7 +139,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aur",
+      "Chs": "奥尔",
       "Eng": "Aur"
     }
   },
@@ -165,7 +165,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Bertr",
+      "Chs": "伯特",
       "Eng": "Bertr"
     }
   },
@@ -191,7 +191,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Chris"
+      "Eng": "Chris",
+      "Chs": "克里斯"
     }
   },
   {
@@ -203,7 +204,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Christ",
+      "Chs": "基督",
       "Eng": "Christ"
     }
   },
@@ -229,7 +230,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Er",
+      "Chs": "铒",
       "Eng": "Er"
     }
   },
@@ -242,7 +243,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Floc",
+      "Chs": "鸥群",
       "Eng": "Floc"
     }
   },
@@ -255,7 +256,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Genev",
+      "Chs": "格内夫",
       "Eng": "Genev"
     }
   },
@@ -281,7 +282,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Greg"
+      "Eng": "Greg",
+      "Chs": "格雷格"
     }
   },
   {
@@ -293,7 +295,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Guill",
+      "Chs": "吉尔",
       "Eng": "Guill"
     }
   },
@@ -306,7 +308,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Him",
+      "Chs": "他",
       "Eng": "Him"
     }
   },
@@ -332,7 +334,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hon",
+      "Chs": "亲爱的",
       "Eng": "Hon"
     }
   },
@@ -358,7 +360,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Jer",
+      "Chs": "杰瑞",
       "Eng": "Jer"
     }
   },
@@ -371,7 +373,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mist",
+      "Chs": "薄雾",
       "Eng": "Mist"
     }
   },
@@ -384,7 +386,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nat",
+      "Chs": "纳特",
       "Eng": "Nat"
     }
   },
@@ -397,7 +399,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nath",
+      "Chs": "纳特",
       "Eng": "Nath"
     }
   },
@@ -423,7 +425,7 @@
       ]
     },
     "Texts": {
-      "Chs": "No",
+      "Chs": "不",
       "Eng": "No"
     }
   },
@@ -436,7 +438,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Noir",
+      "Chs": "黑色",
       "Eng": "Noir"
     }
   },
@@ -449,7 +451,7 @@
       ]
     },
     "Texts": {
-      "Chs": "a",
+      "Chs": "一",
       "Eng": "a"
     }
   },
@@ -475,7 +477,7 @@
       ]
     },
     "Texts": {
-      "Chs": "amin",
+      "Chs": "阿明",
       "Eng": "amin"
     }
   },
@@ -488,7 +490,7 @@
       ]
     },
     "Texts": {
-      "Chs": "an",
+      "Chs": "一",
       "Eng": "an"
     }
   },
@@ -514,7 +516,7 @@
       ]
     },
     "Texts": {
-      "Chs": "and",
+      "Chs": "和",
       "Eng": "and"
     }
   },
@@ -527,7 +529,7 @@
       ]
     },
     "Texts": {
-      "Chs": "andre",
+      "Chs": "安德烈",
       "Eng": "andre"
     }
   },
@@ -553,7 +555,7 @@
       ]
     },
     "Texts": {
-      "Chs": "asie",
+      "Chs": "阿西",
       "Eng": "asie"
     }
   },
@@ -566,7 +568,7 @@
       ]
     },
     "Texts": {
-      "Chs": "aume",
+      "Chs": "奥姆",
       "Eng": "aume"
     }
   },
@@ -592,7 +594,7 @@
       ]
     },
     "Texts": {
-      "Chs": "dre",
+      "Chs": "数据记录设备",
       "Eng": "dre"
     }
   },
@@ -618,7 +620,7 @@
       ]
     },
     "Texts": {
-      "Chs": "elie",
+      "Chs": "埃利",
       "Eng": "elie"
     }
   },
@@ -657,7 +659,7 @@
       ]
     },
     "Texts": {
-      "Chs": "er",
+      "Chs": "呃",
       "Eng": "er"
     }
   },
@@ -670,7 +672,7 @@
       ]
     },
     "Texts": {
-      "Chs": "erine",
+      "Chs": "艾琳",
       "Eng": "erine"
     }
   },
@@ -683,7 +685,7 @@
       ]
     },
     "Texts": {
-      "Chs": "es",
+      "Chs": "锿",
       "Eng": "es"
     }
   },
@@ -709,7 +711,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ette",
+      "Chs": "埃特",
       "Eng": "ette"
     }
   },
@@ -761,7 +763,7 @@
       ]
     },
     "Texts": {
-      "Chs": "lo",
+      "Chs": "瞧",
       "Eng": "lo"
     }
   },
@@ -826,7 +828,7 @@
       ]
     },
     "Texts": {
-      "Chs": "on",
+      "Chs": "在",
       "Eng": "on"
     }
   },
@@ -839,7 +841,7 @@
       ]
     },
     "Texts": {
-      "Chs": "onse",
+      "Chs": "温泉",
       "Eng": "onse"
     }
   },
@@ -852,7 +854,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ophe",
+      "Chs": "奥菲",
       "Eng": "ophe"
     }
   },
@@ -866,7 +868,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ore",
+      "Chs": "矿石",
       "Eng": "ore"
     }
   },
@@ -905,7 +907,7 @@
       ]
     },
     "Texts": {
-      "Chs": "the",
+      "Chs": "这个",
       "Eng": "the"
     }
   },
@@ -918,7 +920,7 @@
       ]
     },
     "Texts": {
-      "Chs": "tine",
+      "Chs": "时间",
       "Eng": "tine"
     }
   },
