--- a/translations/texts/species/shadownamegen.config.json
+++ b/translations/texts/species/shadownamegen.config.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Brinksetter",
+      "Chs": "Brinksetter",
       "Eng": " Brinksetter"
     }
   },
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Cryptic",
+      "Chs": "神秘的",
       "Eng": " Cryptic"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Deedalat",
+      "Chs": "Deedalat",
       "Eng": " Deedalat"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Dormo",
+      "Chs": "多尔莫",
       "Eng": " Dormo"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Eclipse",
+      "Chs": "日食",
       "Eng": " Eclipse"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Eclipsis",
+      "Chs": "Eclipsis",
       "Eng": " Eclipsis"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Freyat",
+      "Chs": "弗雷亚特",
       "Eng": " Freyat"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Holdra",
+      "Chs": "霍尔德拉",
       "Eng": " Holdra"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Inconnu",
+      "Chs": "因康努",
       "Eng": " Inconnu"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Iulli",
+      "Chs": "尤利",
       "Eng": " Iulli"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Jeffas",
+      "Chs": "杰弗斯",
       "Eng": " Jeffas"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Jex",
+      "Chs": "Jex",
       "Eng": " Jex"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Kilvroy",
+      "Chs": "Kilvroy",
       "Eng": " Kilvroy"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Kin-killer",
+      "Chs": "亲属杀手",
       "Eng": " Kin-killer"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Lightkiller",
+      "Chs": "光杀手",
       "Eng": " Lightkiller"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Loremaker",
+      "Chs": "Loremaker",
       "Eng": " Loremaker"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Loreteller",
+      "Chs": "洛雷特勒",
       "Eng": " Loreteller"
     }
   },
@@ -229,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Malignus",
+      "Chs": "Malignus",
       "Eng": " Malignus"
     }
   },
@@ -242,7 +242,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Occultus",
+      "Chs": "神秘",
       "Eng": " Occultus"
     }
   },
@@ -255,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Opinaga",
+      "Chs": "Opinaga",
       "Eng": " Opinaga"
     }
   },
@@ -268,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Podunkus",
+      "Chs": "波德库斯",
       "Eng": " Podunkus"
     }
   },
@@ -281,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Porg",
+      "Chs": "波尔格",
       "Eng": " Porg"
     }
   },
@@ -294,7 +294,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Quantus",
+      "Chs": "Quantus",
       "Eng": " Quantus"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Sashat",
+      "Chs": "Sashat",
       "Eng": " Sashat"
     }
   },
@@ -320,7 +320,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Shadefriend",
+      "Chs": "影友",
       "Eng": " Shadefriend"
     }
   },
@@ -333,7 +333,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Shadekin",
+      "Chs": "沙德金",
       "Eng": " Shadekin"
     }
   },
@@ -346,7 +346,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Shadesmar",
+      "Chs": "着色器",
       "Eng": " Shadesmar"
     }
   },
@@ -359,7 +359,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Shadowend",
+      "Chs": "Shadowend",
       "Eng": " Shadowend"
     }
   },
@@ -372,7 +372,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Shadowhunter",
+      "Chs": "影子猎手",
       "Eng": " Shadowhunter"
     }
   },
@@ -385,7 +385,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Taleswapper",
+      "Chs": "故事人",
       "Eng": " Taleswapper"
     }
   },
@@ -398,7 +398,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Telishat",
+      "Chs": "Telishat",
       "Eng": " Telishat"
     }
   },
@@ -411,7 +411,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Tenebris",
+      "Chs": "Tenebris",
       "Eng": " Tenebris"
     }
   },
@@ -424,7 +424,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Umbra",
+      "Chs": "雨伞",
       "Eng": " Umbra"
     }
   },
@@ -437,7 +437,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Veilwalker",
+      "Chs": "Veilwalker",
       "Eng": " Veilwalker"
     }
   },
@@ -450,7 +450,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Voidsearcher",
+      "Chs": "无效搜索者",
       "Eng": " Voidsearcher"
     }
   },
@@ -463,7 +463,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Yeltzor",
+      "Chs": "叶尔佐尔",
       "Eng": " Yeltzor"
     }
   },
@@ -476,7 +476,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Azral",
+      "Chs": "亚兹拉尔",
       "Eng": "Azral"
     }
   },
@@ -489,7 +489,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Baer",
+      "Chs": "贝尔",
       "Eng": "Baer"
     }
   },
@@ -502,7 +502,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Balfrey",
+      "Chs": "巴尔弗里",
       "Eng": "Balfrey"
     }
   },
@@ -515,7 +515,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Basha",
+      "Chs": "巴沙",
       "Eng": "Basha"
     }
   },
@@ -528,7 +528,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dave"
+      "Eng": "Dave",
+      "Chs": "戴夫"
     }
   },
   {
@@ -540,7 +541,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Della",
+      "Chs": "德拉",
       "Eng": "Della"
     }
   },
@@ -566,7 +567,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Gantzi",
+      "Chs": "甘茨",
       "Eng": "Gantzi"
     }
   },
@@ -592,7 +593,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Irrelia",
+      "Chs": "Irelia",
       "Eng": "Irrelia"
     }
   },
@@ -631,7 +632,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kylos",
+      "Chs": "基洛斯",
       "Eng": "Kylos"
     }
   },
@@ -644,7 +645,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Lillit",
+      "Chs": "莉利特",
       "Eng": "Lillit"
     }
   },
@@ -670,7 +671,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Loor",
+      "Chs": "洛尔",
       "Eng": "Loor"
     }
   },
@@ -696,7 +697,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nimk",
+      "Chs": "尼姆克",
       "Eng": "Nimk"
     }
   },
@@ -709,7 +710,7 @@
       ]
     },
     "Texts": {
-      "Chs": "No-Light",
+      "Chs": "没有灯光",
       "Eng": "No-Light"
     }
   },
@@ -722,7 +723,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nyanot",
+      "Chs": "尼亚诺",
       "Eng": "Nyanot"
     }
   },
@@ -748,7 +749,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Penum",
+      "Chs": "阴茎",
       "Eng": "Penum"
     }
   },
@@ -761,7 +762,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Penumbra",
+      "Chs": "半影",
       "Eng": "Penumbra"
     }
   },
@@ -774,7 +775,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Penumbral",
+      "Chs": "半影",
       "Eng": "Penumbral"
     }
   },
@@ -787,7 +788,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pol",
+      "Chs": "波尔",
       "Eng": "Pol"
     }
   },
@@ -826,7 +827,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Shadea",
+      "Chs": "沙达",
       "Eng": "Shadea"
     }
   },
@@ -865,7 +866,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Sombra",
+      "Chs": "阴影区",
       "Eng": "Sombra"
     }
   },
@@ -878,7 +879,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Sorgus",
+      "Chs": "索格斯",
       "Eng": "Sorgus"
     }
   },
@@ -917,7 +918,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Umbra",
+      "Chs": "雨伞",
       "Eng": "Umbra"
     }
   },
@@ -930,7 +931,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Umbral",
+      "Chs": "雨伞",
       "Eng": "Umbral"
     }
   },
@@ -956,7 +957,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Veilar",
+      "Chs": "面纱",
       "Eng": "Veilar"
     }
   },
@@ -969,7 +970,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Vertexa",
+      "Chs": "顶点",
       "Eng": "Vertexa"
     }
   },
@@ -982,7 +983,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Visha",
+      "Chs": "维沙",
       "Eng": "Visha"
     }
   },
@@ -1008,7 +1009,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Vorg",
+      "Chs": "沃格",
       "Eng": "Vorg"
     }
   },
@@ -1021,7 +1022,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Vyal",
+      "Chs": "维亚尔",
       "Eng": "Vyal"
     }
   }
