--- a/translations/texts/species/shared_femalenamegen.config.json
+++ b/translations/texts/species/shared_femalenamegen.config.json
@@ -11,7 +11,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Lucretia",
+      "Chs": "卢克丽霞",
       "Eng": "Lucretia"
     }
   },
@@ -27,7 +27,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Sera",
+      "Chs": "色拉",
       "Eng": "Sera"
     }
   },
@@ -43,7 +43,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Thel",
+      "Chs": "瑟尔",
       "Eng": "Thel"
     }
   }
