--- a/translations/texts/species/shared_malenamegen.config.json
+++ b/translations/texts/species/shared_malenamegen.config.json
@@ -11,7 +11,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Aurelius",
+      "Chs": "奥勒留",
       "Eng": " Aurelius"
     }
   },
@@ -27,7 +27,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Baske",
+      "Chs": "巴斯克",
       "Eng": " Baske"
     }
   },
@@ -43,7 +43,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Batiatus",
+      "Chs": "巴蒂亚图斯",
       "Eng": " Batiatus"
     }
   },
@@ -59,7 +59,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Billii",
+      "Chs": "比利",
       "Eng": " Billii"
     }
   },
@@ -75,7 +75,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Daelom",
+      "Chs": "障碍赛",
       "Eng": " Daelom"
     }
   },
@@ -91,7 +91,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Episco",
+      "Chs": "Epico",
       "Eng": " Episco"
     }
   },
@@ -107,7 +107,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Lindae",
+      "Chs": "林达",
       "Eng": " Lindae"
     }
   },
@@ -123,7 +123,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Lissus",
+      "Chs": "李沙斯",
       "Eng": " Lissus"
     }
   },
@@ -139,7 +139,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Nassum",
+      "Chs": "纳苏姆",
       "Eng": " Nassum"
     }
   },
@@ -155,7 +155,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Piscus",
+      "Chs": "双鱼座",
       "Eng": " Piscus"
     }
   },
@@ -171,7 +171,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Pontus",
+      "Chs": "庞图斯",
       "Eng": " Pontus"
     }
   },
@@ -187,7 +187,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Quants",
+      "Chs": "数量分析",
       "Eng": " Quants"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Rintus",
+      "Chs": "Rintus",
       "Eng": " Rintus"
     }
   },
@@ -219,7 +219,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Scipus",
+      "Chs": "Scipus",
       "Eng": " Scipus"
     }
   },
@@ -235,7 +235,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Septus",
+      "Chs": "塞普图斯",
       "Eng": " Septus"
     }
   },
@@ -251,7 +251,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Sintus",
+      "Chs": "罪人",
       "Eng": " Sintus"
     }
   },
@@ -267,7 +267,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Sollus",
+      "Chs": "Sollus",
       "Eng": " Sollus"
     }
   },
@@ -284,7 +284,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Tenebrus",
+      "Chs": "夜骐",
       "Eng": " Tenebrus"
     }
   },
@@ -300,7 +300,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Tinae",
+      "Chs": "癣",
       "Eng": " Tinae"
     }
   },
@@ -316,7 +316,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Vintre",
+      "Chs": "文特尔",
       "Eng": " Vintre"
     }
   },
@@ -332,7 +332,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'ez",
+      "Chs": "嗯",
       "Eng": "'ez"
     }
   },
@@ -396,7 +396,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-X",
+      "Chs": "十、",
       "Eng": "-X"
     }
   },
@@ -540,7 +540,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-hmoov",
+      "Chs": "-赫莫夫",
       "Eng": "-hmoov"
     }
   },
@@ -556,7 +556,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-kaus",
+      "Chs": "-考斯",
       "Eng": "-kaus"
     }
   },
@@ -572,7 +572,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-kit",
+      "Chs": "-工具包",
       "Eng": "-kit"
     }
   },
@@ -620,7 +620,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-kraim",
+      "Chs": "-克莱姆",
       "Eng": "-kraim"
     }
   },
@@ -636,7 +636,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-leks",
+      "Chs": "-列克斯",
       "Eng": "-leks"
     }
   },
@@ -652,7 +652,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-lis",
+      "Chs": "-利斯",
       "Eng": "-lis"
     }
   },
@@ -668,7 +668,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-luk",
+      "Chs": "-卢克",
       "Eng": "-luk"
     }
   },
@@ -700,7 +700,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-meng",
+      "Chs": "-孟",
       "Eng": "-meng"
     }
   },
@@ -796,7 +796,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-pak",
+      "Chs": "-帕克",
       "Eng": "-pak"
     }
   },
@@ -812,7 +812,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-plast",
+      "Chs": "-塑料",
       "Eng": "-plast"
     }
   },
@@ -844,7 +844,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-pul",
+      "Chs": "-普尔",
       "Eng": "-pul"
     }
   },
@@ -908,7 +908,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-svaik",
+      "Chs": "-斯维克",
       "Eng": "-svaik"
     }
   },
@@ -924,7 +924,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-taiys",
+      "Chs": "-泰斯",
       "Eng": "-taiys"
     }
   },
@@ -1020,7 +1020,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-uk",
+      "Chs": "-英国",
       "Eng": "-uk"
     }
   },
@@ -1052,7 +1052,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-wang",
+      "Chs": "-王",
       "Eng": "-wang"
     }
   },
@@ -1084,7 +1084,7 @@
       ]
     },
     "Texts": {
-      "Chs": "-zoov",
+      "Chs": "-动物园",
       "Eng": "-zoov"
     }
   },
@@ -1100,7 +1100,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Arichni",
+      "Chs": "阿里奇尼",
       "Eng": "Arichni"
     }
   },
@@ -1116,7 +1116,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Bah",
+      "Chs": "泰铢",
       "Eng": "Bah"
     }
   },
@@ -1132,7 +1132,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Baselle",
+      "Chs": "巴塞尔",
       "Eng": "Baselle"
     }
   },
@@ -1164,7 +1164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Brutii",
+      "Chs": "布鲁蒂",
       "Eng": "Brutii"
     }
   },
@@ -1180,7 +1180,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Chivii",
+      "Chs": "七",
       "Eng": "Chivii"
     }
   },
@@ -1212,7 +1212,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Danii",
+      "Chs": "丹尼",
       "Eng": "Danii"
     }
   },
@@ -1228,7 +1228,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Dencae",
+      "Chs": "丹卡",
       "Eng": "Dencae"
     }
   },
@@ -1260,7 +1260,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ju",
+      "Chs": "朱",
       "Eng": "Ju"
     }
   },
@@ -1324,7 +1324,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Lucre",
+      "Chs": "卢克雷",
       "Eng": "Lucre"
     }
   },
@@ -1356,7 +1356,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ma",
+      "Chs": "妈妈",
       "Eng": "Ma"
     }
   },
@@ -1372,7 +1372,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mae",
+      "Chs": "梅",
       "Eng": "Mae"
     }
   },
@@ -1436,7 +1436,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Oraclii",
+      "Chs": "奥拉克利",
       "Eng": "Oraclii"
     }
   },
@@ -1484,7 +1484,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Quint",
+      "Chs": "昆特",
       "Eng": "Quint"
     }
   },
@@ -1516,7 +1516,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Scandii",
+      "Chs": "斯堪的纳维亚",
       "Eng": "Scandii"
     }
   },
@@ -1532,7 +1532,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Scipii",
+      "Chs": "西庇阿家族",
       "Eng": "Scipii"
     }
   },
@@ -1548,7 +1548,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Strichnii",
+      "Chs": "斯特里尼",
       "Eng": "Strichnii"
     }
   },
@@ -1580,7 +1580,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tullie",
+      "Chs": "图利",
       "Eng": "Tullie"
     }
   },
@@ -1596,7 +1596,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tullius",
+      "Chs": "图利乌斯",
       "Eng": "Tullius"
     }
   },
@@ -1612,7 +1612,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Varro",
+      "Chs": "瓦尔罗",
       "Eng": "Varro"
     }
   },
@@ -1628,7 +1628,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Zah",
+      "Chs": "扎",
       "Eng": "Zah"
     }
   },
@@ -1660,7 +1660,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ache",
+      "Chs": "疼痛",
       "Eng": "ache"
     }
   },
@@ -1692,7 +1692,7 @@
       ]
     },
     "Texts": {
-      "Chs": "dazh",
+      "Chs": "达斯",
       "Eng": "dazh"
     }
   },
@@ -1756,7 +1756,7 @@
       ]
     },
     "Texts": {
-      "Chs": "flaz",
+      "Chs": "弗拉兹",
       "Eng": "flaz"
     }
   },
@@ -1772,7 +1772,7 @@
       ]
     },
     "Texts": {
-      "Chs": "har",
+      "Chs": "哈尔",
       "Eng": "har"
     }
   },
@@ -1804,7 +1804,7 @@
       ]
     },
     "Texts": {
-      "Chs": "kara",
+      "Chs": "卡拉",
       "Eng": "kara"
     }
   },
@@ -1820,7 +1820,7 @@
       ]
     },
     "Texts": {
-      "Chs": "karu",
+      "Chs": "卡鲁",
       "Eng": "karu"
     }
   },
@@ -1836,7 +1836,7 @@
       ]
     },
     "Texts": {
-      "Chs": "keth",
+      "Chs": "凯斯",
       "Eng": "keth"
     }
   },
@@ -1852,7 +1852,7 @@
       ]
     },
     "Texts": {
-      "Chs": "kitt",
+      "Chs": "凯特",
       "Eng": "kitt"
     }
   },
@@ -1868,7 +1868,7 @@
       ]
     },
     "Texts": {
-      "Chs": "laen",
+      "Chs": "莱恩",
       "Eng": "laen"
     }
   },
@@ -1900,7 +1900,7 @@
       ]
     },
     "Texts": {
-      "Chs": "maki",
+      "Chs": "梅基",
       "Eng": "maki"
     }
   },
@@ -1932,7 +1932,7 @@
       ]
     },
     "Texts": {
-      "Chs": "mexy",
+      "Chs": "墨西哥",
       "Eng": "mexy"
     }
   },
@@ -1948,7 +1948,7 @@
       ]
     },
     "Texts": {
-      "Chs": "miza",
+      "Chs": "米扎",
       "Eng": "miza"
     }
   },
@@ -1964,7 +1964,7 @@
       ]
     },
     "Texts": {
-      "Chs": "sorn",
+      "Chs": "索恩",
       "Eng": "sorn"
     }
   },
@@ -2012,7 +2012,7 @@
       ]
     },
     "Texts": {
-      "Chs": "user",
+      "Chs": "用户",
       "Eng": "user"
     }
   },
@@ -2028,7 +2028,7 @@
       ]
     },
     "Texts": {
-      "Chs": "wen",
+      "Chs": "温",
       "Eng": "wen"
     }
   },
