--- a/translations/texts/species/shared_slimepersonnamegen.config.json
+++ b/translations/texts/species/shared_slimepersonnamegen.config.json
@@ -11,7 +11,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aleksei",
+      "Chs": "阿列克谢",
       "Eng": "Aleksei"
     }
   },
@@ -27,7 +27,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Andre"
+      "Eng": "Andre",
+      "Chs": "安德烈"
     }
   },
   {
@@ -42,7 +43,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ashton"
+      "Eng": "Ashton",
+      "Chs": "阿什顿"
     }
   },
   {
@@ -57,7 +59,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Billy"
+      "Eng": "Billy",
+      "Chs": "比利"
     }
   },
   {
@@ -72,7 +75,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Byron"
+      "Eng": "Byron",
+      "Chs": "拜伦"
     }
   },
   {
@@ -87,7 +91,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Carson"
+      "Eng": "Carson",
+      "Chs": "卡森"
     }
   },
   {
@@ -102,7 +107,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cassidy"
+      "Eng": "Cassidy",
+      "Chs": "卡西迪"
     }
   },
   {
@@ -117,7 +123,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Charlie"
+      "Eng": "Charlie",
+      "Chs": "查理"
     }
   },
   {
@@ -132,7 +139,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Chen",
+      "Chs": "陈",
       "Eng": "Chen"
     }
   },
@@ -164,7 +171,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cody"
+      "Eng": "Cody",
+      "Chs": "科迪"
     }
   },
   {
@@ -179,7 +187,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Corey"
+      "Eng": "Corey",
+      "Chs": "科里"
     }
   },
   {
@@ -194,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Delaney",
+      "Chs": "德莱尼",
       "Eng": "Delaney"
     }
   },
@@ -210,7 +219,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ellery",
+      "Chs": "埃勒里",
       "Eng": "Ellery"
     }
   },
@@ -226,7 +235,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Emerson",
+      "Chs": "爱默生",
       "Eng": "Emerson"
     }
   },
@@ -242,7 +251,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fabian"
+      "Eng": "Fabian",
+      "Chs": "法比安"
     }
   },
   {
@@ -257,7 +267,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Francis"
+      "Eng": "Francis",
+      "Chs": "弗兰西斯"
     }
   },
   {
@@ -272,7 +283,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hayden"
+      "Eng": "Hayden",
+      "Chs": "海登"
     }
   },
   {
@@ -287,7 +299,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jaden"
+      "Eng": "Jaden",
+      "Chs": "贾登"
     }
   },
   {
@@ -302,7 +315,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jamie"
+      "Eng": "Jamie",
+      "Chs": "杰米"
     }
   },
   {
@@ -317,7 +331,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jan"
+      "Eng": "Jan",
+      "Chs": "一月"
     }
   },
   {
@@ -332,7 +347,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jesse"
+      "Eng": "Jesse",
+      "Chs": "杰西"
     }
   },
   {
@@ -347,7 +363,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jin"
+      "Eng": "Jin",
+      "Chs": "金"
     }
   },
   {
@@ -362,7 +379,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Julian"
+      "Eng": "Julian",
+      "Chs": "朱利安"
     }
   },
   {
@@ -377,7 +395,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kadin",
+      "Chs": "卡丹",
       "Eng": "Kadin"
     }
   },
@@ -393,7 +411,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kiley",
+      "Chs": "基利",
       "Eng": "Kiley"
     }
   },
@@ -409,7 +427,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lane"
+      "Eng": "Lane",
+      "Chs": "车道"
     }
   },
   {
@@ -424,7 +443,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Liu"
+      "Eng": "Liu",
+      "Chs": "线路接口单元"
     }
   },
   {
@@ -439,7 +459,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lucian"
+      "Eng": "Lucian",
+      "Chs": "卢西恩"
     }
   },
   {
@@ -454,7 +475,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Marley"
+      "Eng": "Marley",
+      "Chs": "马利"
     }
   },
   {
@@ -469,7 +491,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Naoko",
+      "Chs": "直子",
       "Eng": "Naoko"
     }
   },
@@ -485,7 +507,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Oleg",
+      "Chs": "奥列格",
       "Eng": "Oleg"
     }
   },
@@ -501,7 +523,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Orion"
+      "Eng": "Orion",
+      "Chs": "猎户座"
     }
   },
   {
@@ -516,7 +539,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Parker"
+      "Eng": "Parker",
+      "Chs": "帕克"
     }
   },
   {
@@ -531,7 +555,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Perry"
+      "Eng": "Perry",
+      "Chs": "佩里"
     }
   },
   {
@@ -546,7 +571,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sonny"
+      "Eng": "Sonny",
+      "Chs": "桑尼"
     }
   },
   {
@@ -561,7 +587,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tyler"
+      "Eng": "Tyler",
+      "Chs": "泰勒"
     }
   },
   {
@@ -592,7 +619,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wesley"
+      "Eng": "Wesley",
+      "Chs": "韦斯利"
     }
   },
   {
@@ -607,7 +635,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Wynne",
+      "Chs": "韦恩",
       "Eng": "Wynne"
     }
   },
@@ -623,7 +651,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yang"
+      "Eng": "Yang",
+      "Chs": "杨"
     }
   },
   {
@@ -638,7 +667,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Yi",
+      "Chs": "易",
       "Eng": "Yi"
     }
   },
@@ -654,7 +683,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Yuri",
+      "Chs": "尤里",
       "Eng": "Yuri"
     }
   },
@@ -670,7 +699,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Yury",
+      "Chs": "尤里",
       "Eng": "Yury"
     }
   }
