--- a/translations/texts/species/skathfemalenamegen.config.json
+++ b/translations/texts/species/skathfemalenamegen.config.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Dra",
+      "Chs": "达拉",
       "Eng": "'Dra"
     }
   },
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Guna",
+      "Chs": "古纳",
       "Eng": "'Guna"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Hae",
+      "Chs": "海",
       "Eng": "'Hae"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Kima",
+      "Chs": "Kima",
       "Eng": "'Kima"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Lama",
+      "Chs": "'喇嘛",
       "Eng": "'Lama"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Lehra",
+      "Chs": "勒拉",
       "Eng": "'Lehra"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Leia",
+      "Chs": "莱娅",
       "Eng": "'Leia"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Liha",
+      "Chs": "李哈",
       "Eng": "'Liha"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Mah",
+      "Chs": "马",
       "Eng": "'Mah"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Mana",
+      "Chs": "'玛娜",
       "Eng": "'Mana"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Mara",
+      "Chs": "玛拉",
       "Eng": "'Mara"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Mira",
+      "Chs": "米拉",
       "Eng": "'Mira"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Nah",
+      "Chs": "不",
       "Eng": "'Nah"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Nera",
+      "Chs": "“奈拉",
       "Eng": "'Nera"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Ta",
+      "Chs": "“Ta",
       "Eng": "'Ta"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tama",
+      "Chs": "'多摩",
       "Eng": "'Tama"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tara",
+      "Chs": "塔拉",
       "Eng": "'Tara"
     }
   },
@@ -229,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tava",
+      "Chs": "“塔瓦",
       "Eng": "'Tava"
     }
   },
@@ -242,7 +242,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Taya",
+      "Chs": "塔雅",
       "Eng": "'Taya"
     }
   },
@@ -255,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tha",
+      "Chs": "那",
       "Eng": "'Tha"
     }
   },
@@ -268,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tina",
+      "Chs": "蒂娜",
       "Eng": "'Tina"
     }
   },
@@ -281,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Wara",
+      "Chs": "“瓦拉",
       "Eng": "'Wara"
     }
   },
@@ -294,7 +294,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ah",
+      "Chs": "啊",
       "Eng": "Ah"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cris",
+      "Chs": "克里斯",
       "Eng": "Cris"
     }
   },
@@ -320,7 +320,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Daph",
+      "Chs": "达芙",
       "Eng": "Daph"
     }
   },
@@ -359,7 +359,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Gah",
+      "Chs": "啊",
       "Eng": "Gah"
     }
   },
@@ -372,7 +372,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hih",
+      "Chs": "嗨",
       "Eng": "Hih"
     }
   },
@@ -437,7 +437,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mah",
+      "Chs": "马",
       "Eng": "Mah"
     }
   },
@@ -450,7 +450,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nes",
+      "Chs": "奈斯",
       "Eng": "Nes"
     }
   },
@@ -463,7 +463,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ohs",
+      "Chs": "哦",
       "Eng": "Ohs"
     }
   },
@@ -476,7 +476,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pal",
+      "Chs": "帕尔",
       "Eng": "Pal"
     }
   },
@@ -502,7 +502,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Sam",
+      "Chs": "山姆",
       "Eng": "Sam"
     }
   },
@@ -515,7 +515,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Val",
+      "Chs": "瓦尔",
       "Eng": "Val"
     }
   }
