--- a/translations/texts/species/slimepersonfemalenamegen.config.json
+++ b/translations/texts/species/slimepersonfemalenamegen.config.json
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Acūr",
+      "Chs": "阿丘尔",
       "Eng": "Acūr"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ak",
+      "Chs": "阿克",
       "Eng": "Ak"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Akrēl",
+      "Chs": "阿克雷尔",
       "Eng": "Akrēl"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aksas",
+      "Chs": "阿克萨斯",
       "Eng": "Aksas"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Alang",
+      "Chs": "阿兰",
       "Eng": "Alang"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Amil",
+      "Chs": "阿米尔",
       "Eng": "Amil"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Arkōn",
+      "Chs": "方舟",
       "Eng": "Arkōn"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ayan",
+      "Chs": "阿扬",
       "Eng": "Ayan"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cantiran",
+      "Chs": "坎蒂兰语",
       "Eng": "Cantiran"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cenān",
+      "Chs": "塞纳恩",
       "Eng": "Cenān"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cilvar",
+      "Chs": "奇瓦尔",
       "Eng": "Cilvar"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Eriks",
+      "Chs": "埃里克斯",
       "Eng": "Eriks"
     }
   },
@@ -255,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hapiyam",
+      "Chs": "哈皮亚姆",
       "Eng": "Hapiyam"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hīliyam",
+      "Chs": "希利亚姆",
       "Eng": "Hīliyam"
     }
   },
@@ -320,7 +320,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hūmaim",
+      "Chs": "胡曼",
       "Eng": "Hūmaim"
     }
   },
@@ -346,7 +346,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Katal",
+      "Chs": "卡塔尔",
       "Eng": "Katal"
     }
   },
@@ -359,7 +359,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kaus",
+      "Chs": "考斯",
       "Eng": "Kaus"
     }
   },
@@ -372,7 +372,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Kit"
+      "Eng": "Kit",
+      "Chs": "配套元件"
     }
   },
   {
@@ -410,7 +411,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Koob",
+      "Chs": "库布",
       "Eng": "Koob"
     }
   },
@@ -423,7 +424,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kraim",
+      "Chs": "克莱姆",
       "Eng": "Kraim"
     }
   },
@@ -436,7 +437,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Krimcan",
+      "Chs": "克里姆坎",
       "Eng": "Krimcan"
     }
   },
@@ -449,7 +450,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kurōm",
+      "Chs": "吴",
       "Eng": "Kurōm"
     }
   },
@@ -475,7 +476,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Leks",
+      "Chs": "莱克斯",
       "Eng": "Leks"
     }
   },
@@ -501,7 +502,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Lis",
+      "Chs": "李",
       "Eng": "Lis"
     }
   },
@@ -514,7 +515,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Luk",
+      "Chs": "陆",
       "Eng": "Luk"
     }
   },
@@ -527,7 +528,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mañcal",
+      "Chs": "马尼卡尔",
       "Eng": "Mañcal"
     }
   },
@@ -540,7 +541,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mettan",
+      "Chs": "梅坦",
       "Eng": "Mettan"
     }
   },
@@ -566,7 +567,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Muyal",
+      "Chs": "穆亚尔",
       "Eng": "Muyal"
     }
   },
@@ -579,7 +580,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mēkam",
+      "Chs": "梅卡姆",
       "Eng": "Mēkam"
     }
   },
@@ -605,7 +606,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Neptiyūn",
+      "Chs": "尼普顿",
       "Eng": "Neptiyūn"
     }
   },
@@ -618,7 +619,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nhia",
+      "Chs": "日亚",
       "Eng": "Nhia"
     }
   },
@@ -631,7 +632,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nilal",
+      "Chs": "无",
       "Eng": "Nilal"
     }
   },
@@ -644,7 +645,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ninēn",
+      "Chs": "宁",
       "Eng": "Ninēn"
     }
   },
@@ -683,7 +684,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nīlam",
+      "Chs": "尼拉姆",
       "Eng": "Nīlam"
     }
   },
@@ -748,7 +749,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pul",
+      "Chs": "普尔",
       "Eng": "Pul"
     }
   },
@@ -761,7 +762,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pullat",
+      "Chs": "普拉",
       "Eng": "Pullat"
     }
   },
@@ -774,7 +775,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Raitar",
+      "Chs": "雷塔尔",
       "Eng": "Raitar"
     }
   },
@@ -801,7 +802,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Rēcar",
+      "Chs": "Rē汽车",
       "Eng": "Rēcar"
     }
   },
@@ -840,7 +841,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Skait",
+      "Chs": "滑冰",
       "Eng": "Skait"
     }
   },
@@ -866,7 +867,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Svaik",
+      "Chs": "斯维克",
       "Eng": "Svaik"
     }
   },
@@ -892,7 +893,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tarkat",
+      "Chs": "塔尔卡特",
       "Eng": "Tarkat"
     }
   },
@@ -905,7 +906,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tast",
+      "Chs": "味道",
       "Eng": "Tast"
     }
   },
@@ -918,7 +919,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tavun",
+      "Chs": "塔文",
       "Eng": "Tavun"
     }
   },
@@ -931,7 +932,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Terts",
+      "Chs": "泰尔茨",
       "Eng": "Terts"
     }
   },
@@ -944,7 +945,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ticail",
+      "Chs": "蒂卡尔",
       "Eng": "Ticail"
     }
   },
@@ -957,7 +958,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ticais",
+      "Chs": "蒂凯斯",
       "Eng": "Ticais"
     }
   },
@@ -983,7 +984,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tirākan",
+      "Chs": "蒂腊坎",
       "Eng": "Tirākan"
     }
   },
@@ -1009,7 +1010,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tuttanākam",
+      "Chs": "图坦卡蒙",
       "Eng": "Tuttanākam"
     }
   },
@@ -1035,7 +1036,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tīl",
+      "Chs": "蒂尔",
       "Eng": "Tīl"
     }
   },
@@ -1061,7 +1062,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tōtōn",
+      "Chs": "东藤",
       "Eng": "Tōtōn"
     }
   },
@@ -1074,7 +1075,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Viyalan",
+      "Chs": "维雅兰",
       "Eng": "Viyalan"
     }
   },
@@ -1087,7 +1088,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Vāran",
+      "Chs": "瓦兰",
       "Eng": "Vāran"
     }
   },
@@ -1100,7 +1101,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Wang",
+      "Chs": "王",
       "Eng": "Wang"
     }
   },
@@ -1126,7 +1127,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Yurenas",
+      "Chs": "尤雷纳斯",
       "Eng": "Yurenas"
     }
   },
@@ -1152,7 +1153,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ēs",
+      "Chs": "\"s",
       "Eng": "Ēs"
     }
   }
