--- a/translations/texts/species/slimepersonmalenamegen.config.json
+++ b/translations/texts/species/slimepersonmalenamegen.config.json
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Atu",
+      "Chs": "阿图",
       "Eng": "Atu"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cai",
+      "Chs": "蔡",
       "Eng": "Cai"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cevvāy",
+      "Chs": "切瓦伊",
       "Eng": "Cevvāy"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Chue",
+      "Chs": "崔",
       "Eng": "Chue"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Civappu",
+      "Chs": "西瓦普",
       "Eng": "Civappu"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cutti",
+      "Chs": "卡蒂",
       "Eng": "Cutti"
     }
   },
@@ -190,7 +190,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Eli"
+      "Eng": "Eli",
+      "Chs": "伊莱"
     }
   },
   {
@@ -228,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Haitrō",
+      "Chs": "海太郎",
       "Eng": "Haitrō"
     }
   },
@@ -254,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Huab",
+      "Chs": "华博",
       "Eng": "Huab"
     }
   },
@@ -267,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hītā",
+      "Chs": "希塔",
       "Eng": "Hītā"
     }
   },
@@ -280,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Intikō",
+      "Chs": "银藤",
       "Eng": "Intikō"
     }
   },
@@ -293,7 +294,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Iravu",
+      "Chs": "伊拉沃",
       "Eng": "Iravu"
     }
   },
@@ -306,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Jeti",
+      "Chs": "杰蒂",
       "Eng": "Jeti"
     }
   },
@@ -319,7 +320,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Jikcā",
+      "Chs": "吉卡",
       "Eng": "Jikcā"
     }
   },
@@ -332,7 +333,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Karuppu",
+      "Chs": "卡鲁普",
       "Eng": "Karuppu"
     }
   },
@@ -384,7 +385,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kulōrō",
+      "Chs": "库郎",
       "Eng": "Kulōrō"
     }
   },
@@ -397,7 +398,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kuranku",
+      "Chs": "库兰库",
       "Eng": "Kuranku"
     }
   },
@@ -410,7 +411,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kutirai",
+      "Chs": "库蒂赖",
       "Eng": "Kutirai"
     }
   },
@@ -449,7 +450,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Kōli",
+      "Chs": "高丽",
       "Eng": "Kōli"
     }
   },
@@ -462,7 +463,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Lakki",
+      "Chs": "拉基",
       "Eng": "Lakki"
     }
   },
@@ -475,7 +476,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Lerti",
+      "Chs": "勒蒂",
       "Eng": "Lerti"
     }
   },
@@ -488,7 +489,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Liyō",
+      "Chs": "李洋",
       "Eng": "Liyō"
     }
   },
@@ -501,7 +502,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Makilcci",
+      "Chs": "马基尔奇",
       "Eng": "Makilcci"
     }
   },
@@ -514,7 +515,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mettā",
+      "Chs": "梅特",
       "Eng": "Mettā"
     }
   },
@@ -540,7 +541,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Milli",
+      "Chs": "米莉",
       "Eng": "Milli"
     }
   },
@@ -553,7 +554,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Māttu",
+      "Chs": "马图",
       "Eng": "Māttu"
     }
   },
@@ -579,7 +580,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Nātu",
+      "Chs": "努图",
       "Eng": "Nātu"
     }
   },
@@ -605,7 +606,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Paccai",
+      "Chs": "Packai",
       "Eng": "Paccai"
     }
   },
@@ -618,7 +619,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Panri",
+      "Chs": "潘里",
       "Eng": "Panri"
     }
   },
@@ -631,7 +632,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pataraca",
+      "Chs": "帕塔拉卡",
       "Eng": "Pataraca"
     }
   },
@@ -657,7 +658,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pilli",
+      "Chs": "皮利",
       "Eng": "Pilli"
     }
   },
@@ -670,7 +671,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Piranta",
+      "Chs": "皮兰塔",
       "Eng": "Piranta"
     }
   },
@@ -683,7 +684,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Plū",
+      "Chs": "请",
       "Eng": "Plū"
     }
   },
@@ -709,7 +710,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Puli",
+      "Chs": "埔里",
       "Eng": "Puli"
     }
   },
@@ -735,7 +736,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pāmpu",
+      "Chs": "帕姆普",
       "Eng": "Pāmpu"
     }
   },
@@ -748,7 +749,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pāstan",
+      "Chs": "巴基斯坦",
       "Eng": "Pāstan"
     }
   },
@@ -787,7 +788,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Smōkki",
+      "Chs": "斯蒙基",
       "Eng": "Smōkki"
     }
   },
@@ -813,7 +814,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Teycinō",
+      "Chs": "泰霉素",
       "Eng": "Teycinō"
     }
   },
@@ -826,7 +827,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tic",
+      "Chs": "抽搐",
       "Eng": "Tic"
     }
   },
@@ -878,7 +879,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tīyci",
+      "Chs": "提西",
       "Eng": "Tīyci"
     }
   },
@@ -891,7 +892,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Tōminō",
+      "Chs": "东民",
       "Eng": "Tōminō"
     }
   },
@@ -904,7 +905,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Urcā",
+      "Chs": "乌尔查",
       "Eng": "Urcā"
     }
   },
@@ -917,7 +918,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Vellai",
+      "Chs": "维来伊",
       "Eng": "Vellai"
     }
   },
@@ -930,7 +931,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Velli",
+      "Chs": "维利",
       "Eng": "Velli"
     }
   },
