--- a/translations/texts/species/thelusiannamegen.config.json
+++ b/translations/texts/species/thelusiannamegen.config.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Akie",
+      "Chs": "吉泽秋绘",
       "Eng": " Akie"
     }
   },
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Blad",
+      "Chs": "布雷德",
       "Eng": " Blad"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Blut",
+      "Chs": "布鲁特",
       "Eng": " Blut"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Bulka",
+      "Chs": "布尔卡",
       "Eng": " Bulka"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Cek",
+      "Chs": "Cek",
       "Eng": " Cek"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Fel",
+      "Chs": "费尔",
       "Eng": " Fel"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Fonz",
+      "Chs": "Fonz",
       "Eng": " Fonz"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Gor",
+      "Chs": "戈尔",
       "Eng": " Gor"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Harr",
+      "Chs": "哈尔",
       "Eng": " Harr"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Hlat",
+      "Chs": "Hlat",
       "Eng": " Hlat"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": " In-Ki",
+      "Chs": "In Ki",
       "Eng": " In-Ki"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Ja",
+      "Chs": "青年成就",
       "Eng": " Ja"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Jik",
+      "Chs": "Jik",
       "Eng": " Jik"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Ky",
+      "Chs": "Ky",
       "Eng": " Ky"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Nonk",
+      "Chs": "Nonk",
       "Eng": " Nonk"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Norgi-Tu",
+      "Chs": "屠",
       "Eng": " Norgi-Tu"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Poe",
+      "Chs": "坡",
       "Eng": " Poe"
     }
   },
@@ -229,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Poi",
+      "Chs": "Poi",
       "Eng": " Poi"
     }
   },
@@ -242,7 +242,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Qua",
+      "Chs": "Qua",
       "Eng": " Qua"
     }
   },
@@ -255,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Radi",
+      "Chs": "拉迪",
       "Eng": " Radi"
     }
   },
@@ -268,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Rek",
+      "Chs": "Rek",
       "Eng": " Rek"
     }
   },
@@ -281,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Sev",
+      "Chs": "Sev",
       "Eng": " Sev"
     }
   },
@@ -294,7 +294,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Tash",
+      "Chs": "塔什",
       "Eng": " Tash"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Vatorr",
+      "Chs": "瓦托",
       "Eng": " Vatorr"
     }
   },
@@ -320,7 +320,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Vulk",
+      "Chs": "Vulk",
       "Eng": " Vulk"
     }
   },
@@ -333,7 +333,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Xal",
+      "Chs": "赛尔",
       "Eng": " Xal"
     }
   },
@@ -346,7 +346,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Zena",
+      "Chs": "泽娜",
       "Eng": " Zena"
     }
   }
