--- a/translations/texts/species/mantizimalenamegen.config.json
+++ b/translations/texts/species/mantizimalenamegen.config.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Marcellus",
+      "Chs": "马塞勒斯",
       "Eng": " Marcellus"
     }
   },
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Nonus",
+      "Chs": "诺努斯",
       "Eng": " Nonus"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Olo",
+      "Chs": "Olo",
       "Eng": " Olo"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Otho",
+      "Chs": "Otho",
       "Eng": " Otho"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Pompilius",
+      "Chs": "蓬皮留斯",
       "Eng": " Pompilius"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": " Tacitus",
+      "Chs": "塔西佗",
       "Eng": " Tacitus"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aemilius",
+      "Chs": "伊蚊",
       "Eng": "Aemilius"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Aggripa",
+      "Chs": "阿格里帕",
       "Eng": "Aggripa"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Antonius",
+      "Chs": "安东尼乌斯",
       "Eng": "Antonius"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Baro",
+      "Chs": "巴罗",
       "Eng": "Baro"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Blasius",
+      "Chs": "布拉西乌斯",
       "Eng": "Blasius"
     }
   },
@@ -151,7 +151,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cassius"
+      "Eng": "Cassius",
+      "Chs": "卡西乌斯"
     }
   },
   {
@@ -163,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cato",
+      "Chs": "卡托",
       "Eng": "Cato"
     }
   },
@@ -176,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cicero",
+      "Chs": "西塞罗",
       "Eng": "Cicero"
     }
   },
@@ -189,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Cramm",
+      "Chs": "克拉姆",
       "Eng": "Cramm"
     }
   },
@@ -202,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Crassus",
+      "Chs": "克拉苏",
       "Eng": "Crassus"
     }
   },
@@ -215,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Crixus",
+      "Chs": "克雷斯",
       "Eng": "Crixus"
     }
   },
@@ -228,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Dorne",
+      "Chs": "多恩",
       "Eng": "Dorne"
     }
   },
@@ -241,7 +242,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Fabius",
+      "Chs": "法比尤斯",
       "Eng": "Fabius"
     }
   },
@@ -267,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Hipicii",
+      "Chs": "嬉皮士",
       "Eng": "Hipicii"
     }
   },
@@ -280,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Holus",
+      "Chs": "你好",
       "Eng": "Holus"
     }
   },
@@ -306,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Livius",
+      "Chs": "李维",
       "Eng": "Livius"
     }
   },
@@ -319,7 +320,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Marcus"
+      "Eng": "Marcus",
+      "Chs": "马库斯"
     }
   },
   {
@@ -331,7 +333,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Onomae",
+      "Chs": "小野前",
       "Eng": "Onomae"
     }
   },
@@ -344,7 +346,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Paulus",
+      "Chs": "保卢斯",
       "Eng": "Paulus"
     }
   },
@@ -357,7 +359,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Quintus",
+      "Chs": "昆图斯",
       "Eng": "Quintus"
     }
   },
@@ -370,7 +372,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Regulus",
+      "Chs": "轩辕十四",
       "Eng": "Regulus"
     }
   },
@@ -396,7 +398,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Sabinus",
+      "Chs": "萨宾派",
       "Eng": "Sabinus"
     }
   },
@@ -422,7 +424,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Servius",
+      "Chs": "维乌斯",
       "Eng": "Servius"
     }
   },
@@ -435,7 +437,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Titus",
+      "Chs": "提图斯",
       "Eng": "Titus"
     }
   },
