--- a/translations/texts/species/skathmalenamegen.config.json
+++ b/translations/texts/species/skathmalenamegen.config.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Dahl",
+      "Chs": "达尔",
       "Eng": "'Dahl"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Enz",
+      "Chs": "恩兹",
       "Eng": "'Enz"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Kah",
+      "Chs": "“Kah",
       "Eng": "'Kah"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Kal",
+      "Chs": "卡尔",
       "Eng": "'Kal"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Kley",
+      "Chs": "克利",
       "Eng": "'Kley"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Lu",
+      "Chs": "陆",
       "Eng": "'Lu"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Lur",
+      "Chs": "卢尔",
       "Eng": "'Lur"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Mun",
+      "Chs": "'门",
       "Eng": "'Mun"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tago",
+      "Chs": "'塔戈",
       "Eng": "'Tago"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tah",
+      "Chs": "塔哈",
       "Eng": "'Tah"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Ther",
+      "Chs": "“Ther",
       "Eng": "'Ther"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Tri",
+      "Chs": "“三",
       "Eng": "'Tri"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Yahl",
+      "Chs": "“耶",
       "Eng": "'Yahl"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Zah",
+      "Chs": "扎",
       "Eng": "'Zah"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Zhu",
+      "Chs": "朱",
       "Eng": "'Zhu"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": "'Zul",
+      "Chs": "“Zul",
       "Eng": "'Zul"
     }
   },
@@ -268,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Dim",
+      "Chs": "昏暗",
       "Eng": "Dim"
     }
   },
@@ -281,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Era",
+      "Chs": "时代",
       "Eng": "Era"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Gal",
+      "Chs": "女孩",
       "Eng": "Gal"
     }
   },
@@ -320,7 +320,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Her",
+      "Chs": "她",
       "Eng": "Her"
     }
   },
@@ -372,7 +372,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Luhr",
+      "Chs": "卢尔",
       "Eng": "Luhr"
     }
   },
@@ -385,7 +385,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Mer",
+      "Chs": "梅尔",
       "Eng": "Mer"
     }
   },
@@ -398,7 +398,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Pahr",
+      "Chs": "帕尔",
       "Eng": "Pahr"
     }
   },
@@ -424,7 +424,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ro-ald",
+      "Chs": "罗尔德",
       "Eng": "Ro-ald"
     }
   },
@@ -437,7 +437,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stan"
+      "Eng": "Stan",
+      "Chs": "斯坦"
     }
   },
   {
@@ -449,7 +450,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Ther",
+      "Chs": "疗法",
       "Eng": "Ther"
     }
   },
@@ -462,7 +463,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Vas",
+      "Chs": "瓦斯",
       "Eng": "Vas"
     }
   }
